[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/environments/hitbox_area.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 5, 5 )

[node name="HitboxArea" type="Area2D"]
visible = false
script = ExtResource( 1 )
texture = NodePath("../Texture")
health_bar = NodePath("../HealthBar")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 9 )

[connection signal="area_entered" from="." to="." method="on_hitbox_area_entered"]
[connection signal="body_entered" from="." to="." method="on_hitbox_area_body_entered"]
